--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="blog.css">
   <link rel="stylesheet" href="Chatbot/css/chat.css">
   <link rel="stylesheet" href="Chatbot/css/home.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -36,7 +36,7 @@
           </div>
           <ul>
             <li><a href="#hero" data-after="Home">Home</a></li>
-            <li><a href="#services" data-after="Service">Services</a></li>
+            <li><a href="#services" data-after="Service">Awareness</a></li>
             <li><a href="#about" data-after="About">About</a></li>
             <li><a href="#contact" data-after="Contact">Contact</a></li>
             <li><a type="button" href="#hero" class="signin" data-after="Contact" style="cursor: pointer;"
@@ -50,88 +50,9 @@
   <!-- End Header -->
 
   <!-- login -->
-  <div class="overlay" onclick="closeform()"></div>
-  <section class="container1 forms">
-    <div class="form login">
-      <div class="form-content">
-        <header>Lo<span class="but-col">g</span>in</header>
-        <form action="#">
-          <div class="field input-field">
-            <input type="email" placeholder="Email" class="input">
-          </div>
-
-          <div class="field input-field">
-            <input type="password" placeholder="Password" class="password">
-            <i class='bx bx-hide eye-icon'></i>
-          </div>
-
-          <div class="form-link">
-            <a href="#" class="forgot-pass">Forgot password?</a>
-          </div>
-
-          <div class="field button-field">
-            <button id="newpage" type="button">Login</button>
-          </div>
-        </form>
-
-        <div class="form-link">
-          <span style="color: white;">Don't have an account? <a href="#" class="link signup-link">Signup</a></span>
-        </div>
-      </div>
-
-      <div class="line"></div>
-
-      <div class="media-options">
-        <a href="https://accounts.google.com/" class="field google">
-          <img src="login/images/google.png" alt="" class="google-img">
-          <span style="color: white;">Login with Google</span>
-        </a>
-      </div>
-    </div>
-
-    <!-- Signup Form -->
-
-    <div class="form signup">
-      <div class="form-content">
-        <header>Sig<span class="but-col">n</span>up</header>
-        <form action="#">
-          <div class="field input-field">
-            <input type="email" placeholder="Email" class="input">
-          </div>
-
-          <div class="field input-field">
-            <input type="password" placeholder="Enter password" class="password">
-          </div>
-
-          <div class="field input-field">
-            <input type="password" placeholder="Confirm password" class="password">
-            <i class='bx bx-hide eye-icon'></i>
-          </div>
-
-          <div class="field button-field">
-            <button>Signup</button>
-          </div>
-        </form>
-
-        <div class="form-link">
-          <span style="color: white;">Already have an account? <a href="#" class="link login-link ">Login</a></span>
-        </div>
-      </div>
-      <div class="line"></div>
-
-      <div class="media-options">
-        <a href="https://accounts.google.com/" class="field google">
-          <img src="login/images/google.png" alt="" class="google-img">
-          <span style="color: white;">Login with Google</span>
-        </a>
-      </div>
-
-    </div>
-  </section>
-
-
+  
   <!-- Hero Section  -->
-  <section id="hero">
+  <!-- <section id="hero">
     <div class="hero container">
       <div>
         <h1> <span></span></h1>
@@ -140,7 +61,7 @@
         <a href="#projects" type="button" class="cta" onclick="chatshow()">Need help</a>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- End Hero Section  -->
 
   <!-- Service Section -->
@@ -155,21 +76,19 @@
           <div class="icon">
             <img src="https://img.icons8.com/windows/32/000000/bathhouse.png" />
           </div>
-          <h2>Want therapy?</h2>
+          <h2><a href="https://thc.nic.in/Central%20Governmental%20Acts/Transgender%20Persons%20(Protection%20of%20Rights)%20Act,%202019.pdf"> The Transgender Persons (Protection of Rights) Act, 2019</a></h2>
           <p>
-            LGBTQ may find that the social stigma of living as a minority is a
-            source of stress
-            or anxiety.</p>
+            This law aims to protect the rights of transgender individuals and prohibits discrimination against them in education, employment, and healthcare.</p>
         </div>
-        <div class="service-item">
+        <a href="https://www.indiatoday.in/india/story/supreme-court-nalsa-judgment-third-genders-transgenders-pride-month-1815578-2021-06-16"></a><div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
-          <h2>Chat Room</h2>
+          <h2>The National Legal Services Authority (NALSA) </h2>
           <p>Here we provide you space .so, you can open up about your issues both anonymously and in public.</p>
-        </div>
+        </div></a>
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/windows/32/228BE6/leadership.png" /></div>
-          <h2>Leaders</h2>
-          <p>Some of the leads who mention their social presence and their stories are here. <br></p>
+          <h2>The HIV/AIDS Bill, 2017</h2>
+          <p>SThis law prohibits discrimination against people living with HIV/AIDS in education, employment, healthcare, access to public spaces and services, and housing. It ensures their right to privacy and confidentiality, and provides for legal recourse in case of discrimination or violation of their rights. <br></p>
         </div>
       </div>
     </div>
@@ -187,7 +106,7 @@
         </div>
       </div>
       <div class="col-right">
-        <h1 class="section-title">Our <span>Pride</span></h1>
+        <h1 class="section-title">Our <span>leaders</span></h1>
         <h2>Gauri Sawant</h2>
         <p>You will remember Gauri Sawant from the Vicks commercial where she smashes gender stereotypes about parenting
           by adopting a girl. Gauri was born Ganesh but never felt comfortable in her skin when she was a guy. She stood
