firebase added to raise issue and send to organisation

--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
           <p>Here we provide you space .so, you can open up about your issues both anonymously and in public.</p>
         </div>
         <div class="service-item">
-          <div class="icon"><img src="https://img.icons8.com/windows/32/228BE6/leadership.png" /></div>
+          <div class="icon"><img src="https://img.icons8.com/windows/32/228BE6/leadership.png" /></div><a href="blog.html">
           <h2>Leaders</h2>
           <p>Some of the leads who mention their social presence and their stories are here. <br></p>
-        </div>
+        </div></a>
       </div>
     </div>
   </section>
