--- a/firebase.html
+++ b/firebase.html
@@ -14,19 +14,18 @@
     <h1 class="brand"><span></span> </h1>
     <div class="wrapper">
       <div class="company-info">
-       
-       
+       <img src="wearesame.png" alt="" srcset="">
       </div>
       <div class="contact">
-        <h3>Raise your issue</h3>
+        <h1 >Raise your issue</h1>
         <div class="alert">Your message has been sent</div>
         <form id="contactForm">
           <p>
-            <label>Name</label>
+            <label>First Name</label>
             <input type="text" name="name" id="name" required>
           </p>
           <p>
-            <label>Company</label>
+            <label>Last Name</label>
             <input type="text" name="company" id="company">
           </p>
           <p>
@@ -38,7 +37,7 @@
             <input type="text" name="phone" id="phone">
           </p>
           <p class="full">
-            <label>Message</label>
+            <label>Issue</label>
             <textarea name="message" rows="5" id="message"></textarea>
           </p>
           <p class="full">
