--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" type="text/css" href="./Chatbot/style.css" />
   <link
     href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,300&family=Work+Sans:ital,wght@0,200;1,100&display=swap"
     rel="stylesheet">
@@ -137,7 +136,7 @@
         <h1> <span></span></h1>
         <h1>“Born this way.”<span></span></h1>
 
-        <a href="#projects" type="button" class="cta" onclick="chatshow()">Need help</a>
+        <a href="firebase.html" type="button" class="cta" >Raise Issue</a>
       </div>
     </div>
   </section>
@@ -151,7 +150,7 @@
         <p></p>
       </div>
       <div class="service-bottom">
-        <div class="service-item">
+        <a href="#"><div class="service-item">
           <div class="icon">
             <img src="https://img.icons8.com/windows/32/000000/bathhouse.png" />
           </div>
@@ -160,24 +159,22 @@
             LGBTQ may find that the social stigma of living as a minority is a
             source of stress
             or anxiety.</p>
-        </div>
-        <div class="service-item">
+        </div></a>
+        <a href="#"><div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
           <h2>Chat Room</h2>
           <p>Here we provide you space .so, you can open up about your issues both anonymously and in public.</p>
-        </div>
-        <div class="service-item">
-          <div class="icon"><img src="https://img.icons8.com/windows/32/228BE6/leadership.png" /></div><a href="blog.html">
-          <h2>Leaders</h2>
-          <p>Some of the leads who mention their social presence and their stories are here. <br></p>
+        </div></a>
+        <a href="nearbyme.html"><div class="service-item">
+          <div class="icon"><img src="https://img.icons8.com/windows/32/228BE6/leadership.png" /></div>
+          <h2>Near By Me</h2>
+          <p>Here With this feature you Can find the nearest Washroom, Restautent, and NGO in that particular location. <br></p>
         </div></a>
       </div>
     </div>
   </section>
   <!-- End Service Section -->
-
-
-
+  
   <!-- About Section -->
   <section id="about">
     <div class="about container">
@@ -194,7 +191,7 @@
           for her identity and has become an inspiration for countless trans people. This transgender activist is a
           mother figure in real life to many children at Aaji Cha Ghar where kids of sex workers can reclaim their
           childhood. Gauri started the trust Sakhi Char Chowghi, which works for the rights of trans people.</p>
-        <a href="#" class="cta">Know more</a>
+        <a href="https://www.jagrantv.com/en-show/gauri-sawant-biography-transgender-early-life-parents-daughter-social-work-biopic-and-more-rc1035462" class="cta">Know more</a>
       </div>
     </div>
   </section>
